# TestSwiss2

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/utils/: api_requests.py
