[tool.poetry]
name = "testswiss2"
version = "0.1.0"
description = ""
authors = ["Razvan Ritivoi <razvan.ritivoi@vodafone.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.25.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
